@@ -8,6 +8,8 @@
 
     * las/arch/x86_64/main.c: Added the CPUID instruction
 
+    * las/arch/x86_64/main.c: Added the CRC32 instruction
+
 
 2013-12-07  Hirochika Asai  <asai@scyphus.co.jp>
 
